--- a/index.css
+++ b/index.css
@@ -35,10 +35,16 @@
 .switch-enter {
   opacity: 0.01;
   -webkit-transform: scale(.5);
+  -moz-transform: scale(.5);
+  -ms-transform: scale(.5);
+  transform: scale(.5);
   transition: all .3s ease-out;
 }
 
 .switch-enter.switch-enter-active {
-  -webkit-transform: scale(1);
   opacity: 1;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
