--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
   -webkit-user-select: none;
   user-select: none;
   cursor: pointer;
-  transition: all .1s ease-out;
+  /*transition: all .1s ease-out;*/
 }
 
 .switch:hover {
